@@ -34,38 +34,35 @@ function gui_util.navigate_to(e)
       elseif action == "view_product_details" and #context_data.products == 1 then
         return context_data.products[1]
       elseif action == "get_blueprint" then
-        local blueprint_recipe = tags.blueprint_recipe
-        if blueprint_recipe then
-          if context_data.blueprintable then
-            local cursor_stack = player.cursor_stack
-            player.clear_cursor()
-            if cursor_stack and cursor_stack.valid then
-              local CollisionBox = area.load(game.entity_prototypes[context.name].collision_box)
-              local height = CollisionBox:height()
-              local width = CollisionBox:width()
-              cursor_stack.set_stack({ name = "blueprint", count = 1 })
-              cursor_stack.set_blueprint_entities({
-                {
-                  entity_number = 1,
-                  name = context.name,
-                  position = {
-                    -- Entities with an even number of tiles to a side need to be set at -0.5 instead of 0
-                    math.ceil(width) % 2 == 0 and -0.5 or 0,
-                    math.ceil(height) % 2 == 0 and -0.5 or 0,
-                  },
-                  recipe = blueprint_recipe,
+        if context_data.blueprintable then
+          local cursor_stack = player.cursor_stack
+          player.clear_cursor()
+          if cursor_stack and cursor_stack.valid then
+            local CollisionBox = area.load(game.entity_prototypes[context.name].collision_box)
+            local height = CollisionBox:height()
+            local width = CollisionBox:width()
+            cursor_stack.set_stack({ name = "blueprint", count = 1 })
+            cursor_stack.set_blueprint_entities({
+              {
+                entity_number = 1,
+                name = context.name,
+                position = {
+                  -- Entities with an even number of tiles to a side need to be set at -0.5 instead of 0
+                  math.ceil(width) % 2 == 0 and -0.5 or 0,
+                  math.ceil(height) % 2 == 0 and -0.5 or 0,
                 },
-              })
-              player.add_to_clipboard(cursor_stack)
-              player.activate_paste()
-            end
-          else
-            player.create_local_flying_text({
-              text = { "message.rb-cannot-create-blueprint" },
-              create_at_cursor = true,
+                recipe = tags.blueprint_recipe,
+              },
             })
-            player.play_sound({ path = "utility/cannot_build" })
+            player.add_to_clipboard(cursor_stack)
+            player.activate_paste()
           end
+        else
+          player.create_local_flying_text({
+            text = { "message.rb-cannot-create-blueprint" },
+            create_at_cursor = true,
+          })
+          player.play_sound({ path = "utility/cannot_build" })
         end
       elseif action == "open_in_technology_window" then
         local player_table = global.players[e.player_index]
