@@ -11,10 +11,11 @@ Date: ????
     - Added visual mode to the search GUI, providing a more vanilla-like search interface
       - This interface can only show items and fluids
   Changes:
+    - Any blueprintable entity may be shift+clicked to get a blueprint of it, regardless of whether or not it has a recipe (#91)
     - Category and group table items are hidden by default
-    - Technology unlocks equipment, unlocks fluids, unlocks items, and unlocks machines are hidden by default
     - Fluid temperature variants are now sorted and placed adjacent to their base fluid in search results
     - Refactored all GUI code to improve modularity and significantly cleaned up the codebase
+    - Technology unlocks equipment, unlocks fluids, unlocks items, and unlocks machines are hidden by default
   Bugfixes:
     - Fixed a crash when a mod prototype was removed without the mod versions changing
     - Fixed "can mine" table header being unlocalised
